--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,9 @@
 
 /*********************************/
 
+body p {
+    font-family: 'Times New Roman';
+}
 a:link {
     text-decoration: none;
 }
@@ -52,9 +55,11 @@ li {
     padding-top: 4%;
 }
 
-.page-standard{
+.page-standard {
     width: 100%;
     height: 45em;
+    margin-top: 10%;
+    padding: 0 10% 0 10%;
 }
 
 .footer {
@@ -91,4 +96,9 @@ li {
 
 body {
     padding-top: 40px;
+}
+
+
+#eco_friendly:hover {
+    color: #006231 !important;
 }
