modif Confé pleniere

--- a/styles/Pages/Conference_pleniere.css
+++ b/styles/Pages/Conference_pleniere.css
@@ -7,6 +7,17 @@
     margin-top: 70px;
 }
 
+ul.listePleniere{
+	/*margin-left : 100 px; */
+	 padding: 0px 0px 0px 25px;
+	}
+
+ul.listePleniere li{
+    font-family: times; 
+    font-weight: normal;
+	margin-left :10px;
+	
+}
 
 #Denis-p1 h1 {
     text-align: center;
@@ -26,7 +37,6 @@
 .txtDenis{
     padding: 15px 20px 15px 20px;
     font-family: 'Times New Roman';
-    font-style: italic;
    font-size: 1.1em;
 }
 
