--- a/styles/Pages/Comite.css
+++ b/styles/Pages/Comite.css
@@ -28,7 +28,7 @@
 #txtComite{
     padding: 15px 20px 15px 20px;
     font-family: 'Times New Roman';
-    font-style: italic;
+    font-style: normal;
    font-size: 1.1em;
 }
 .precedent-suivant{
