--- a/styles/Pages/Artiste.css
+++ b/styles/Pages/Artiste.css
@@ -9,11 +9,11 @@
     font-family: Georgia;
 }
 
-#nomArtiste {
-    text-align: center;
-    font-weight: bolder;
-    font-size: 1.4em;
-    font-family: Georgia;
+.page-artiste {
+    width: 100%;
+    height: 55em;
+    margin-top: 5%;
+    padding: 0 10% 0 10%;
 }
 
 #imgArtiste {
@@ -30,32 +30,5 @@
     font-style: normal;
    font-size: 1.2em;
 }
-.precedent-suivant{
-    text-align: center;
-    font-weight: 400;
-    font-size: 1.7em;
-    color: #808080;
-    font-family: 'Times New Roman';
-    font-style:italic; 
-    margin: 15px 0px 15px 0px;
-}
 
-.precedent-suivant:hover{
-    opacity: 0.7;
-}
 
-#ordreAlph {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    width: 1200px;
-}
-
-#AlphTitre {
-    text-align: center;
-    font-weight: bolder;
-    font-size: 1.4em;
-    font-family: Georgia;
-    margin: 25px 5px 15px 5px;
-}
