--- a/styles/Pages/Ecoresponsabilite.css
+++ b/styles/Pages/Ecoresponsabilite.css
@@ -28,8 +28,8 @@
 #txtEco{
     padding: 15px 20px 15px 20px;
     font-family: 'Times New Roman';
-    font-style: italic;
-   font-size: 1.1em;
+    font-style: normal;
+   font-size: 1.2em;
 }
 .precedent-suivant{
     text-align: center;
@@ -45,19 +45,4 @@
     opacity: 0.7;
 }
 
-#ordreAlph {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    width: 1200px;
-}
-
-#AlphTitre {
-    text-align: center;
-    font-weight: bolder;
-    font-size: 1.4em;
-    font-family: Georgia;
-    margin: 25px 5px 15px 5px;
-}
 
