--- a/styles/Pages/Inscription.css
+++ b/styles/Pages/Inscription.css
@@ -1,4 +1,13 @@
+#Inscription-p1{
+    margin-top: 70px;
+}
 
+#Inscription-p1 h1 {
+    text-align: center;
+    font-weight: bolder;
+    font-size: 3em;
+    font-family: Georgia;
+}
 
 #txtInscription{
     padding: 15px 20px 15px 20px;
