--- a/styles/Pages/Comite.css
+++ b/styles/Pages/Comite.css
@@ -23,8 +23,19 @@
     width: 200px;
     height: 200px;
     border-radius: 100% 100% 100% 100%;
+	margin : 5px 5px 5px 5px;
 }
 
+
+ #imgGraphe{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 200px;
+	height: 220px;
+ }
+  
+  
 #txtComite{
     padding: 15px 20px 15px 20px;
     font-family: 'Times New Roman';
@@ -45,18 +56,3 @@
     opacity: 0.7;
 }
 
-#ordreAlph {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    width: 1200px;
-}
-
-#AlphTitre {
-    text-align: center;
-    font-weight: bolder;
-    font-size: 1.4em;
-    font-family: Georgia;
-    margin: 25px 5px 15px 5px;
-}
