--- a/styles/Pages/Artiste.css
+++ b/styles/Pages/Artiste.css
@@ -2,7 +2,6 @@
     margin-top: 70px;
 }
 
-
 #Artistes-p1 h1 {
     text-align: center;
     font-weight: bolder;
@@ -10,11 +9,15 @@
     font-family: Georgia;
 }
 
-#nomArtiste {
-    text-align: center;
-    font-weight: bolder;
-    font-size: 1.4em;
-    font-family: Georgia;
+.page-artiste {
+    /*width: 100%;
+    height: 55em;
+    margin-top: 5%;
+    padding: 0 10% 0 10%;*/
+    width: 100%;
+    margin-top: 10%;
+    padding: 0 10% 0 10%;
+    margin-bottom: 10%;
 }
 
 #imgArtiste {
@@ -28,35 +31,8 @@
 #txtArtiste{
     padding: 15px 20px 15px 20px;
     font-family: 'Times New Roman';
-    font-style: italic;
+    font-style: normal;
    font-size: 1.1em;
 }
-.precedent-suivant{
-    text-align: center;
-    font-weight: 400;
-    font-size: 1.7em;
-    color: #808080;
-    font-family: 'Times New Roman';
-    font-style:italic; 
-    margin: 15px 0px 15px 0px;
-}
 
-.precedent-suivant:hover{
-    opacity: 0.7;
-}
 
-#ordreAlph {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    width: 1200px;
-}
-
-#AlphTitre {
-    text-align: center;
-    font-weight: bolder;
-    font-size: 1.4em;
-    font-family: Georgia;
-    margin: 25px 5px 15px 5px;
-}
