modifs page-standard

--- a/styles/Pages/Ecoresponsabilite.css
+++ b/styles/Pages/Ecoresponsabilite.css
@@ -1,48 +1,26 @@
-#Eco-p1{
+#page-eco{
     margin-top: 70px;
 }
 
-
-#Eco-p1 h1 {
-    text-align: center;
-    font-weight: bolder;
-    font-size: 3em;
-    font-family: Georgia;
-}
-
-#nomEco{
-    text-align: center;
-    font-weight: bolder;
-    font-size: 1.4em;
-    font-family: Georgia;
+#page-eco h1 {
+	text-align: center;
+	font-weight: bolder;
+	font-size: 2.4em;
+	font-family: Georgia;
 }
 
 #imgEco{
-    object-fit: cover;
-    object-position: 100% 0;
-    width: 200px;
-    height: 200px;
-    border-radius: 100% 100% 100% 100%;
+	object-fit: cover;
+	object-position: 100% 0;
+	width: 200px;
+	height: 200px;
+	border-radius: 100% 100% 100% 100%;
 }
 
 #txtEco{
-    padding: 15px 20px 15px 20px;
-    font-family: 'Times New Roman';
-    font-style: normal;
-   font-size: 1.1em;
+	padding: 15px 20px 15px 20px;
+	font-family: 'Times New Roman';
+	font-style: normal;
+	font-size: 1.1em;
 }
-.precedent-suivant{
-    text-align: center;
-    font-weight: 400;
-    font-size: 1.7em;
-    color: #808080;
-    font-family: 'Times New Roman';
-    font-style:italic; 
-    margin: 15px 0px 15px 0px;
-}
-
-.precedent-suivant:hover{
-    opacity: 0.7;
-}
-
 
