--- a/styles/Pages/Horaire.css
+++ b/styles/Pages/Horaire.css
@@ -1,35 +1,25 @@
-#horaireGen {
-    display: block;
-    margin-top: 50px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    width: 1000px;
-}
-
-.page-horaire {
+#page-horaire {
     width: 100%;
     height: 65em;
     margin-top: 5%;
     padding: 0 10% 0 10%;
 }
 
-.page-horaire h1{
-    text-align: center;
-    font-weight: bolder;
-    font-size: 3em;
-    font-family: Georgia;
+#page-horaire h1{
+	text-align: center;
+	font-weight: bolder;
+	font-size: 2.4em;
+	font-family: Georgia;
 }
 
-
 #telechargement {
-    text-align: center;
-    font-weight: 400;
-    font-size: 1.7em;
-    color: #808080;
-    font-family: 'Times New Roman';
-    font-style: italic;
-    margin: 15px 0px 15px 0px;
+	text-align: center;
+	font-weight: 400;
+	font-size: 1.7em;
+	color: #808080;
+	font-family: 'Times New Roman';
+	font-style: italic;
+	margin: 15px 0px 15px 0px;
 }
 
 table {
@@ -39,27 +29,9 @@ table {
 
 th{
 	text-align: center;
-	
-}
-
-td.atelier{
-	
-	background-color:#EAFA9C;
-	border: 2px solid #333;
-	text-align: center;
-	padding: 2px;
-}
-
-td.reunion{
-	
-	background-color:#FFDEFA;
-	border: 2px solid #333;
-	text-align: center;
-	padding: 2px;
 }
 
 td.pause{
-	
 	background-color:#FC90EB;
 	border: 2px solid #333;
 	text-align: center;
@@ -67,7 +39,6 @@ td.pause{
 }
 
 td.journee{
-	
 	background-color:#DFDFDF;
 	border: 2px solid #333;
 	text-align: center;
@@ -75,7 +46,6 @@ td.journee{
 }
 
 td.atelier{
-	
 	background-color:#EAFA9C;
 	border: 2px solid #333;
 	text-align: center;
@@ -83,23 +53,13 @@ td.atelier{
 }
 
 td.reunion{
-	
 	background-color:#FFDEFA;
 	border: 2px solid #333;
 	text-align: center;
 	padding: 2px;
 }
 
-td.pause{
-	
-	background-color:#FC90EB;
-	border: 2px solid #333;
-	text-align: center;
-	padding: 2px;
-}
-
 td.social{
-	
 	background-color:#B3D1FF;
 	border: 2px solid #333;
 	text-align: center;
@@ -114,16 +74,14 @@ tr{
 tr.heure{
 	border-color: black;	
 	border-Top:1pt solid black;
-	
 }
 
 tr.demiHeure{
 	border-color: black;	
 	border-top : 1pt dashed black;
-	
 }
 
 thead, tfoot {
-    background-color: #333;
-    color: #fff;
+	background-color: #333;
+	color: #fff;
 }
