--- a/styles/Pages/Comite.css
+++ b/styles/Pages/Comite.css
@@ -1,13 +1,12 @@
-#Comite-p1{
+#page-comite{
     margin-top: 70px;
 }
 
-
-#Comite-p1 h1 {
-    text-align: center;
-    font-weight: bolder;
-    font-size: 3em;
-    font-family: Georgia;
+#page-comite h1 {
+	text-align: center;
+	font-weight: bolder;
+	font-size: 2.4em;
+	font-family: Georgia;
 }
 
 #nomInvite {
@@ -26,7 +25,6 @@
 	margin : 5px 5px 5px 5px;
 }
 
-
  #imgGraphe{
 	display: block;
 	margin-left: auto;
@@ -34,25 +32,12 @@
 	width: 200px;
 	height: 220px;
  }
-  
-  
+ 
 #txtComite{
-    padding: 15px 20px 15px 20px;
-    font-family: 'Times New Roman';
-    font-style: normal;
-   font-size: 1.1em;
-}
-.precedent-suivant{
-    text-align: center;
-    font-weight: 400;
-    font-size: 1.7em;
-    color: #808080;
-    font-family: 'Times New Roman';
-    font-style:italic; 
-    margin: 15px 0px 15px 0px;
+	padding: 15px 20px 15px 20px;
+	font-family: 'Times New Roman';
+	font-style: normal;
+	font-size: 1.1em;
 }
 
-.precedent-suivant:hover{
-    opacity: 0.7;
-}
 
