--- a/styles/Pages/Itineraire.css
+++ b/styles/Pages/Itineraire.css
@@ -1,29 +1,21 @@
-#Itineraire-p1{
+#page-itineraire{
     margin-top: 70px;
+	height: 100em;
 }
 
-#Itineraire-p1 h1 {
+#page-itineraire h1 {
     text-align: center;
     font-weight: bolder;
-    font-size: 3em;
+    font-size: 2.4em;
     font-family: Georgia;
 }
 
-
-#Itineraire-p1 h3 {
-    padding: 15px 20px 15px 20px;
+#page-itineraire h3 {
+	padding: 15px 20px 15px 20px;
 	text-align: left;
-    font-weight: bolder;
-    font-size: 1.4em;
-    font-family: Georgia;
-}
-
-
-.page-itineraire {
-    width: 100%;
-    height: 100em;
-    margin-top: 5%;
-    padding: 0 10% 0 10%;
+	font-weight: bolder;
+	font-size: 1.4em;
+	font-family: Georgia;
 }
 
 #imgItineraire {
@@ -47,7 +39,6 @@
     object-position: 50% 0;
     width: 300px;
     height: 75px;
-    /*border-radius: 100% 100% 100% 100%;*/
 }
 
 #imgPlanStationsMetro {
@@ -55,6 +46,5 @@
     object-position: 50% 0;
     width: 200px;
     height: 200px;
-    /*border-radius: 100% 100% 100% 100%;*/
 }
 
