--- a/styles/Pages/Nous_contacter.css
+++ b/styles/Pages/Nous_contacter.css
@@ -1,24 +1,18 @@
-#Contact-p1{
-    margin-top: 70px;
+#page-contact{
+	margin-top: 70px;
+	height: 55em;
 }
 
-#Contact-p1 h1 {
-    text-align: center;
-    font-weight: bolder;
-    font-size: 3em;
-    font-family: Georgia;
+#page-contact h1 {
+	text-align: center;
+	font-weight: bolder;
+	font-size: 2.4em;
+	font-family: Georgia;
 }
 
 #txtContact{
-    padding: 15px 20px 15px 20px;
-    font-family: 'Times New Roman';
-    font-style: normal;
-   font-size: 1.1em;
-}
-
-.page-contact {
-    width: 100%;
-    height: 55em;
-    margin-top: 5%;
-    padding: 0 10% 0 10%;
+	padding: 15px 20px 15px 20px;
+	font-family: 'Times New Roman';
+	font-style: normal;
+	font-size: 1.1em;
 }
