--- a/styles/Pages/ProposerUnAtelier.css
+++ b/styles/Pages/ProposerUnAtelier.css
@@ -1,60 +1,27 @@
-#Proposer-p1{
+#page-proposer{
     margin-top: 70px;
 }
 
-#Proposer-p1 h1 {
-    text-align: center;
-    font-weight: bolder;
-    font-size: 3em;
-    font-family: Georgia;
+#page-proposer h1 {
+	text-align: center;
+	font-weight: bolder;
+	font-size: 3em;
+	font-family: Georgia;
 }
 
-
-#Proposer-p1 h3 {
-    padding: 15px 20px 15px 20px;
+#page-proposer h3 {
+	padding: 15px 20px 15px 20px;
 	text-align: left;
-    font-weight: bolder;
-    font-size: 1.4em;
-    font-family: Georgia;
-}
-
-
-.page-proposer{
-    width: 100%;
-    height: 100em;
-    margin-top: 5%;
-    padding: 0 10% 0 10%;
-}
-
-#imgProposer {
-    object-fit: cover;
-    object-position: 50% 0;
-    width: 200px;
-    height: 200px;
-    border-radius: 100% 100% 100% 100%;
+	font-weight: bolder;
+	font-size: 1.4em;
+	font-family: Georgia;
 }
 
 #txtProposer{
-    padding: 5px 20px 55px 20px;
-    font-family: 'Times New Roman';
-    font-style: normal;
-   font-size: 1.1em;
-   margin-bottom: 20px;
-}
-
-#imgSTM {
-    object-fit: cover;
-    object-position: 50% 0;
-    width: 300px;
-    height: 75px;
-    /*border-radius: 100% 100% 100% 100%;*/
-}
-
-#imgPlanStationsMetro {
-    object-fit: cover;
-    object-position: 50% 0;
-    width: 200px;
-    height: 200px;
-    /*border-radius: 100% 100% 100% 100%;*/
+	padding: 5px 20px 55px 20px;
+	font-family: 'Times New Roman';
+	font-style: normal;
+	font-size: 1.1em;
+	margin-bottom: 20px;
 }
 
