--- a/styles/Pages/Apropos_AMQ.css
+++ b/styles/Pages/Apropos_AMQ.css
@@ -1,20 +1,20 @@
-#APropos-p1{
-    margin-top: 70px; 
+#page-apropos{
+	margin-top: 70px; 
 	height: 35em;
 }
 
 #txtAPropos{
-    padding: 5px 20px 55px 20px;
-    font-family: 'Times New Roman';
-    font-style: normal;
-   font-size: 1.1em;
-   margin-bottom: 20px;
+	padding: 5px 20px 55px 20px;
+	font-family: 'Times New Roman';
+	font-style: normal;
+	font-size: 1.1em;
+	margin-bottom: 20px;
 }
 
-#APropos-p1 h1 {
-    text-align: center;
-    font-weight: bolder;
-    font-size: 2.4em;
-    font-family: Georgia;
+#page-apropos h1 {
+	text-align: center;
+	font-weight: bolder;
+	font-size: 2.4em;
+	font-family: Georgia;
 }
 
