Chargement beaucoup plus vite, optimisation mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,11 @@
 
 
 /*********************************/
+#avenir {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 /*Ceci change la couleur de selection*/
 ::selection {
