--- a/styles/Pages/Stationnement.css
+++ b/styles/Pages/Stationnement.css
@@ -1,21 +1,21 @@
-#Stationnement-p1{
-    margin-top: 70px;
+#page-stationnement {
+    /*margin-top: 70px;
+    height: 75em;*/
 }
 
-#Stationnement-p1 h1 {
-    text-align: center;
-    font-weight: bolder;
-    font-size: 3em;
-    font-family: Georgia;
-}
+    #page-stationnement h1 {
+        text-align: center;
+        font-weight: bolder;
+        font-size: 2.4em;
+        font-family: Georgia;
+    }
 
-.page-stationnement {
-    width: 100%;
-    height: 75em;
-    margin-top: 5%;
-    padding: 0 10% 0 10%;
-}
-
+    #page-stationnement h3 {
+        text-align: left;
+        font-weight: bolder;
+        font-size: 1.4em;
+        font-family: Georgia;
+    }
 
 #imgStationnement1 {
     object-fit: cover;
@@ -23,21 +23,19 @@
     width: 200px;
     height: 200px;
     border-radius: 100% 100% 100% 100%;
+    margin: 5px 5px 5px 5px;
 }
-
 
 #imgStationnement2 {
     object-fit: cover;
     object-position: 50% 0;
     width: 275px;
     height: 200px;
-    /*border-radius: 100% 100% 100% 100%;*/
 }
 
-
-.txtStationnement{
-    padding: 15px 20px 15px 20px;
+.txtStationnement {
+    padding: 0px 20px 15px 20px;
     font-family: 'Times New Roman';
     font-style: normal;
-   font-size: 1.2em;
+    font-size: 1.2em;
 }
