--- a/styles/Pages/Artiste.css
+++ b/styles/Pages/Artiste.css
@@ -10,10 +10,14 @@
 }
 
 .page-artiste {
-    width: 100%;
+    /*width: 100%;
     height: 55em;
     margin-top: 5%;
+    padding: 0 10% 0 10%;*/
+    width: 100%;
+    margin-top: 10%;
     padding: 0 10% 0 10%;
+    margin-bottom: 10%;
 }
 
 #imgArtiste {
